styles.css
/* font-family: 'Roboto', sans-serif;

COLORS
teal - #0fb9b1;
frosted white - rgba(225, 225, 225, .9);
grey - #95a5a6;
red - #ee5253

*/

/* *{
  border: 2px solid blue;
} */

html {
  font-family: 'Roboto', sans-serif;
    position: relative;
    min-height: 100%;
    min-width: 460px;
}

body {
  background: url(assets/burger-friends.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  margin: 0;
}

.hidden {
  display: none;
}

.cookpot-image {
  position: relative;
  max-width: 140px;
  opacity: 100;
  z-index: 0;
}

nav {
  background-color: #0fb9b1;
  display: flex;
  top: 0;
  justify-content: space-between;
  align-items: center;
  height: 3.5em;
  width: 100vw;
}

main {
  display: flex;
  justify-content: space-around;
}

.recipe-box,
.dishes-box {
  position: relative;
  margin-top: 6vh;
  margin-bottom: 1vh;
  width: 400px;
  height: 22em;
  background-color: rgba(225, 225, 225, .9);
}

/* #dishes {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
} */

.dishes-box {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

@media screen and (max-width: 840px) {
    main {
        flex-direction: column;
        align-items: center;
    }

    .dishes-box {
      margin-top: 2vh;
      margin-bottom: 6vh;
    }
}

section h3 {
  font-weight: 700;
  margin-top: 10%;
  margin-left: 8%;
}

section h3::after {
    content: "*";
    color: #ee5253;
    vertical-align: super;
}

h2 {
  margin-left: 1vw;
}

h1 {
  text-align: center;
  font-size: 26px;
  margin-top: -7vh;
  padding: 20px;
  font-weight: 900;
}

/* h4 {
  text-align: center;
  font-style: italic;
  padding: 0 10px;
  margin-top: 15vh;
} */

button {
    transition: all .2s ease-in-out;
}

.cook-button {
  background-color: #0fb9b1;
  border-radius: 10px;
  outline: none;
  text-transform: uppercase;
  font-weight: 200;
  padding: 10px 3px;
  margin-left: 8%;
  border: 0;
  opacity: 100;
  width: 190px;
  cursor: pointer;
  transition: all .2s ease-in-out;
}

.cook-button:hover,
.recipe-button:hover,
.go-back:hover {
  transform: scale(1.1)
}

.recipe-button {
  text-transform: uppercase;
  margin-right: 2vw;
  height: 40px;
  border: 0;
  border-radius: 3px;
  padding: 8px;
  cursor: pointer;
  outline: 0;

}

.button-container {
  display: flex;
  justify-content: space-between;
  height: 4vh;
  width: 400px;
  margin-top: 3vh;
}

.btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  background: none;
  margin-right: 5%;
  cursor: pointer; /* Mouse pointer on hover */
  border: 0;
  outline: 0;
  margin-right: 240px;
  margin-top: -20px;
  transition: all .2s ease-in-out;
  margin-left: 3vw;
}

.btn:hover {
  transform: scale(1.5);
}

.btn:active:hover {
  -webkit-transform: scale3d(3, 3, 3);
  transform: scale3d(3);
}


.heart {
  width: 20px;
}



.clear-button {
  padding: 10px;
  color: white;
  background-color: #95a5a6;
  text-transform: uppercase;
  border-radius: 4px;
  width: 70px;
  height: 40px;
  margin-top: -1vh;
  margin-right: 3vw;
  cursor: pointer;
  border: 0;
  outline: 0;
  transition: all .2s ease-in-out;
}

@media screen and (max-width: 769px) {
    .clear-button {
      margin-right: 5vw;
    }
}

.clear-button:hover {
  background-color: #6d8082;
  transform: scale(1.1);
}

ul > input {
  margin-bottom: 5%;
}

.login-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.error1 {
  font-size: 12px;
  margin-top: -5%;
  color: red;
  text-align: left;
  padding: 0;
}

.splash-text {
  margin: 20px 0;
  padding: 0;

}

label {
  text-align: center;
  /* text-transform: uppercase; */
  font-size: 14px;
}

.user-field,
.pass-field {
  margin-bottom: 1vh;
}

.login-form {
  display: flex;
  flex-direction: column;
  width: 360px;
  min-width: 200px;
  height: 360px;
  margin-top: 5vh;
  background-color: rgba(225, 225, 225, .9);
  justify-content: center;
  align-items: center;
  border-radius: 4px;
}

.login-button,
.signup-button,
.reset-button {
  display: inline-block;
  text-transform: uppercase;
  background-color: #0fb9b1;
  border: 0;
  padding: 10px;
  cursor: pointer;
  border-radius: 4px;
  margin-top: -1vh;
  outline: 0;
}

.login-button:hover,
.signup-button:hover,
.login-button:focus,
.signup-button:focus {
  background-color: white;
}

.saved-recipes-section {
  background-color: rgba(225, 225, 225, .9);
  width: 80vw;
  margin-top: 5vh;
  height: auto;
}

.saved {
  margin-left: 1vw;
}

h4.saved {
  text-transform: uppercase;
  margin: 0 2vw;
}

.should-make-txt {
  text-align: center;
  font-style: italic;
  padding: 0 10px;
  margin-top: 15vh;
}

p.saved {
  margin-top: 10px;
  padding: 5px;
}

.go-back-container {
  display: flex;
  justify-content: flex-end;
}

.go-back {
  display: inline-block;
  text-transform: uppercase;
  background-color: #0fb9b1;
  border: 0;
  padding: 10px;
  cursor: pointer;
  margin-right: 3vw;
  margin-bottom: 3vh;
  width: 100px;
  outline: 0;
}

